[IGT][CI] kms_setmode@basic test fails vblank accuracy (18.018us, 0.1%) worse than a scanline
Submitted by Luis Botello
Assigned to Intel GFX Bugs mailing list
Description
Created attachment 129839
dmesg.log
HW config
===============================
Processor Number i7-7500U
Processor Graphics Intel® HD Graphics 620
Graphics Base Frequency 300.00 MHz
Graphics Max Dynamic Frequency 1.05 GHz
Graphics Video Max Memory 32 GB
Graphics Output eDP/DP/HDMI/DVI
SW config
=================================
Kernel version : 4.10.0-rc8-e80b772
commit e80b772bf85da72c46b582e7c4f7b0d861cb4669
drm-tip: 2017y-02m-14d-22h-44m-17s UTC integration manifest
Component : drm
tag : libdrm-2.4.75-6-gec80fd3
commit : ec80fd3
Component : cairo
tag : 1.15.4-6-g5854dd9
commit : 5854dd9
Component : intel-gpu-tools
tag : intel-gpu-tools-1.17-240-gca2ba47
commit : ca2ba47
Steps
====================================
./kms_setmode --run-subtest basic
Program output
=====================================
Testing: basic 1 connector combinations
Test id#1 CRTC count 1
CRTC[31] [Pipe A] Mode: 1920x1080@60Hz Connectors: DP-1[47]
Expected frametime: 16667us; measured 16666.6us +- 4.160us accuracy 0.07% [0.84 scanlines]
Test id#2 CRTC count 1
CRTC[38] [Pipe B] Mode: 1920x1080@60Hz Connectors: DP-1[47]
Expected frametime: 16667us; measured 16666.8us +- 4.891us accuracy 0.09% [0.99 scanlines]
Test id#3 CRTC count 1
CRTC[45] [Pipe C] Mode: 1920x1080@60Hz Connectors: DP-1[47]
Expected frametime: 16667us; measured 16666.7us +- 6.006us accuracy 0.11% [1.22 scanlines]
(kms_setmode:1673) CRITICAL: Test assertion failure function check_timings, file kms_setmode.c:495:
(kms_setmode:1673) CRITICAL: Failed assertion: accuracy < line_time(kmode)
(kms_setmode:1673) CRITICAL: vblank accuracy (18.018us, 0.1%) worse than a scanline (14.815us)
Stack trace:
#0 [__igt_fail_assert+0x101]
#1 (moved) [test_combinations+0x1057]
#2 [main+0x1f5]
#3 (moved) [__libc_start_main+0xf1]
#4 (moved) [_start+0x29]
#5 (closed) [<unknown>
+0x29]
Subtest basic failed.
**** DEBUG ****
(kms_setmode:1673) INFO: Testing: basic 1 connector combinations
(kms_setmode:1673) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x0, size=0)
(kms_setmode:1673) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=1, pitch=7680)
(kms_setmode:1673) INFO: Test id#1 CRTC count 1
(kms_setmode:1673) INFO: CRTC[31] [Pipe A] Mode: 1920x1080@60Hz Connectors: DP-1[47]
(kms_setmode:1673) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x0, size=0)
(kms_setmode:1673) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=2, pitch=7680)
(kms_setmode:1673) INFO: Expected frametime: 16667us; measured 16666.6us +- 4.160us accuracy 0.07% [0.84 scanlines]
(kms_setmode:1673) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x0, size=0)
(kms_setmode:1673) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=3, pitch=7680)
(kms_setmode:1673) INFO: Test id#2 CRTC count 1
(kms_setmode:1673) INFO: CRTC[38] [Pipe B] Mode: 1920x1080@60Hz Connectors: DP-1[47]
(kms_setmode:1673) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x0, size=0)
(kms_setmode:1673) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=4, pitch=7680)
(kms_setmode:1673) INFO: Expected frametime: 16667us; measured 16666.8us +- 4.891us accuracy 0.09% [0.99 scanlines]
(kms_setmode:1673) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x0, size=0)
(kms_setmode:1673) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=5, pitch=7680)
(kms_setmode:1673) INFO: Test id#3 CRTC count 1
(kms_setmode:1673) INFO: CRTC[45] [Pipe C] Mode: 1920x1080@60Hz Connectors: DP-1[47]
(kms_setmode:1673) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x0, size=0)
(kms_setmode:1673) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=6, pitch=7680)
(kms_setmode:1673) INFO: Expected frametime: 16667us; measured 16666.7us +- 6.006us accuracy 0.11% [1.22 scanlines]
(kms_setmode:1673) CRITICAL: Test assertion failure function check_timings, file kms_setmode.c:495:
(kms_setmode:1673) CRITICAL: Failed assertion: accuracy < line_time(kmode)
(kms_setmode:1673) CRITICAL: vblank accuracy (18.018us, 0.1%) worse than a scanline (14.815us)
**** END ****
Subtest basic: FAIL (6.348s)
Please check the attached dmesg.log
Attachment 129839, "dmesg.log":
dmesg.log